[package]
name = "diom-cache"
edition = "2024"
license.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
diom-core.workspace = true
diom-error.workspace = true
diom-id.workspace = true
diom-kv.workspace = true
diom-namespace.workspace = true
diom-operations.workspace = true
fjall-utils.workspace = true
jiff.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
