[package]
name = "diom-cache"
edition = "2024"
license.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
diom-core.workspace = true
diom-error.workspace = true
diom-id.workspace = true
diom-namespace.workspace = true
diom-operations.workspace = true
fjall.workspace = true
fjall-utils.workspace = true
jiff.workspace = true
serde.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
test-utils.workspace = true

[lints]
workspace = true
