[package]
name = "coyote-authorization"
edition = "2024"
license.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
itertools.workspace = true
schemars.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
