[package]
name = "coyote-core"
publish = false
version.workspace = true
license.workspace = true
rust-version.workspace = true
edition = "2024"

[dependencies]
coyote-error.workspace = true
coyote-namespace.workspace = true
regex.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
validator.workspace = true

[lints]
workspace = true
