[package]
name = "coyote-core"
publish = false
version.workspace = true
license.workspace = true
rust-version.workspace = true
edition = "2024"

[dependencies]
coyote-namespace.workspace = true
coyote-proto.workspace = true
jiff.workspace = true
parking_lot.workspace = true
regex.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-util.workspace = true
uuid.workspace = true
validator.workspace = true

[lints]
workspace = true
