[package]
name = "coyote-core"
publish = false
version.workspace = true
license.workspace = true
rust-version.workspace = true
edition = "2024"

[dependencies]
coyote-proto.workspace = true
indexmap.workspace = true
jiff.workspace = true
parking_lot.workspace = true
rand.workspace = true
regex.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true
validator.workspace = true

[dev-dependencies]
tracing-test.workspace = true

[lints]
workspace = true
