[package]
name = "coyote-derive"
publish = false
version.workspace = true
license.workspace = true
rust-version.workspace = true
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["full"] }

[lints]
workspace = true
