[package]
name = "coyote-error"
publish = false
version.workspace = true
license.workspace = true
rust-version.workspace = true
edition = "2024"

[dependencies]
aide.workspace = true
axum.workspace = true
coyote-proto.workspace = true
fjall.workspace = true
hyper.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
