[package]
name = "coyote-namespace"
edition = "2024"
license.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
coyote-error.workspace = true
fjall.workspace = true
fjall-utils.workspace = true
jiff.workspace = true
schemars.workspace = true
serde.workspace = true
uuid.workspace = true

[lints]
workspace = true
