[package]
name = "coyote-namespace"
edition = "2024"
license.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
coyote-core.workspace = true
coyote-error.workspace = true
coyote-id.workspace = true
fjall.workspace = true
fjall-utils.workspace = true
jiff.workspace = true
schemars.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
