[package]
name = "coyote-operations"
edition = "2024"
license.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
coyote-core.workspace = true
coyote-error.workspace = true
futures-util.workspace = true
http.workspace = true
http-serde.workspace = true
jiff.workspace = true
opentelemetry.workspace = true
pastey.workspace = true
serde.workspace = true
tracing.workspace = true

[lints]
workspace = true
