[package]
name = "diom-admin-auth"
edition = "2024"
license.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
diom-authorization.workspace = true
diom-core.workspace = true
diom-error.workspace = true
diom-operations.workspace = true
fjall.workspace = true
fjall-utils.workspace = true
jiff.workspace = true
serde.workspace = true
tracing.workspace = true

[lints]
workspace = true
