[package]
name = "diom-core"
publish = false
version.workspace = true
license.workspace = true
rust-version.workspace = true
edition = "2024"

[dependencies]
diom-namespace.workspace = true
diom-proto.workspace = true
jiff.workspace = true
regex.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-util.workspace = true
uuid.workspace = true
validator.workspace = true

[lints]
workspace = true
