[package]
name = "diom-core"
publish = false
version.workspace = true
license.workspace = true
rust-version.workspace = true
edition = "2024"

[dependencies]
diom-derive.workspace = true
jiff.workspace = true
parking_lot.workspace = true
pastey.workspace = true
rand.workspace = true
regex.workspace = true
schemars.workspace = true
serde.workspace = true
serde_bytes.workspace = true
serde_json.workspace = true
tap.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true
validator.workspace = true

[dev-dependencies]
tracing-test.workspace = true

[lints]
workspace = true
