[package]
name = "diom-id"
edition = "2024"
license.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
data-encoding = "2.10.0"
data-encoding-macro = "0.1.19"
jiff.workspace = true
serde.workspace = true
uuid.workspace = true

[dev-dependencies]
rmp-serde.workspace = true

[lints]
workspace = true
