[package]
name = "diom-namespace"
edition = "2024"
license.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
diom-error.workspace = true
fjall.workspace = true
fjall-utils.workspace = true
jiff.workspace = true
schemars.workspace = true
serde.workspace = true
uuid.workspace = true

[lints]
workspace = true
