[package]
name = "diom-operations"
edition = "2024"
license.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
diom-core.workspace = true
diom-error.workspace = true
futures-util.workspace = true
http.workspace = true
http-serde.workspace = true
jiff.workspace = true
opentelemetry.workspace = true
pastey.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
