[package]
name = "diom-proto"
edition = "2024"
license.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
bytes.workspace = true
http.workspace = true
mime.workspace = true
rmp-serde.workspace = true
serde.workspace = true
tracing.workspace = true

[lints]
workspace = true
