[package]
name = "diom-proto"
edition = "2024"
license.workspace = true
version.workspace = true
rust-version.workspace = true

[package.metadata.cargo-machete]
# required by aide::OperationIo derive macro
ignored = ["schemars"]

[dependencies]
aide.workspace = true
axum.workspace = true
bytes.workspace = true
diom-error.workspace = true
http.workspace = true
mime.workspace = true
reqwest.workspace = true
rmp-serde.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_path_to_error.workspace = true
tap.workspace = true
tokio.workspace = true
tracing.workspace = true
validator.workspace = true

[lints]
workspace = true
