[package]
name = "diom-rate-limiter"
edition = "2024"
license.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
diom-error.workspace = true
diom-operations.workspace = true
fjall.workspace = true
fjall-utils.workspace = true
jiff.workspace = true
schemars.workspace = true
serde.workspace = true
static_assertions.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
