[package]
name = "fjall-utils"
publish = false
version.workspace = true
license.workspace = true
rust-version.workspace = true
edition = "2024"

[dependencies]
anyhow.workspace = true
byteorder.workspace = true
coyote-error.workspace = true
fjall.workspace = true
itertools.workspace = true
rmp-serde.workspace = true
schemars.workspace = true
serde.workspace = true
tracing.workspace = true

[lints]
workspace = true
