[package]
name = "fjall-utils"
publish = false
version.workspace = true
license.workspace = true
rust-version.workspace = true
edition = "2024"

[dependencies]
anyhow.workspace = true
diom-error.workspace = true
fjall.workspace = true
itertools.workspace = true
postcard.workspace = true
schemars.workspace = true
serde.workspace = true
tap.workspace = true
tracing.workspace = true

[lints]
workspace = true
