[package]
name = "fjall-utils"
publish = false
version.workspace = true
license.workspace = true
rust-version.workspace = true
edition = "2024"

[dependencies]
anyhow.workspace = true
byteview.workspace = true
diom-derive.workspace = true
diom-error.workspace = true
diom-id.workspace = true
fjall.workspace = true
itertools.workspace = true
postcard.workspace = true
schemars.workspace = true
serde.workspace = true
tap.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion.workspace = true
rand.workspace = true
serde_bytes.workspace = true

[lints]
workspace = true

[[bench]]
name = "postcard_serialize"
harness = false
